--- a/notebooks/make_db.ipynb
+++ b/notebooks/make_db.ipynb
@@ -12,7 +12,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-02-19 12:42:35.715 INFO    matplotlib.font_manager: Failed to extract font properties from /usr/share/fonts/abattis-cantarell-vf-fonts/Cantarell-VF.otf: In FT2Font: Can not load face (SFNT font table missing; error code 0x8e)\n",
+      "2023-02-19 12:42:35.722 INFO    matplotlib.font_manager: Failed to extract font properties from /usr/share/fonts/google-noto-emoji/NotoColorEmoji.ttf: In FT2Font: Can not load face (unknown file format; error code 0x2)\n",
+      "2023-02-19 12:42:35.747 INFO    matplotlib.font_manager: generated new fontManager\n"
+     ]
+    }
+   ],
    "source": [
     "import streamlit as st\n",
     "from congress import Congress\n",
@@ -21,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -730,12 +740,14 @@
        "   'latest_major_action': 'Presented to President.'}]}"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "congress_num = 117\n",
+    "\n",
     "congress.bills.passed(chamber=HOUSE, congress=congress_num)"
    ]
   },
@@ -749,38 +761,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bill ID: s5168-117, Passed House: 2022-12-21, Passed Senate: 2022-12-15\n"
+      "dict_keys(['chamber', 'start_date', 'end_date', 'num_results', 'votes'])\n",
+      "[True, True, True, True, True, True, True, True]\n",
+      "[True, True, True, True, True, True, True, False]\n"
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "'bill_id'",
+     "data": {
+      "text/plain": [
+       "{'congress': 117,\n",
+       " 'chamber': 'Senate',\n",
+       " 'session': 2,\n",
+       " 'roll_call': 392,\n",
+       " 'source': 'https://www.senate.gov/legislative/LIS/roll_call_votes/vote1172/vote_117_2_00392.xml',\n",
+       " 'url': 'https://www.senate.gov/legislative/LIS/roll_call_lists/roll_call_vote_cfm.cfm?congress=117&session=2&vote=00392',\n",
+       " 'vote_uri': 'https://api.propublica.org/congress/v1/117/senate/sessions/2/votes/392.json',\n",
+       " 'bill': {},\n",
+       " 'amendment': {},\n",
+       " 'nomination': {'nomination_id': 'PN1657-117',\n",
+       "  'number': 'PN1657',\n",
+       "  'name': 'Musetta Tia Johnson',\n",
+       "  'agency': 'The Judiciary'},\n",
+       " 'question': 'On the Nomination',\n",
+       " 'question_text': 'On the Nomination PN1657',\n",
+       " 'description': 'Musetta Tia Johnson, of Virginia, to be a Judge of the United States Court of Appeals for the Armed Forces for a term of fifteen years to expire on the date prescribed by law',\n",
+       " 'vote_type': '1/2',\n",
+       " 'date': '2022-12-15',\n",
+       " 'time': '06:56:00',\n",
+       " 'result': 'Nomination Confirmed',\n",
+       " 'tie_breaker': '',\n",
+       " 'tie_breaker_vote': '',\n",
+       " 'document_number': '1657',\n",
+       " 'document_title': 'Musetta Tia Johnson, of Virginia, to be a Judge of the United States Court of Appeals for the Armed Forces for a term of fifteen years to expire on the date prescribed by law',\n",
+       " 'democratic': {'yes': 47,\n",
+       "  'no': 0,\n",
+       "  'present': 0,\n",
+       "  'not_voting': 0,\n",
+       "  'majority_position': 'Yes'},\n",
+       " 'republican': {'yes': 26,\n",
+       "  'no': 20,\n",
+       "  'present': 0,\n",
+       "  'not_voting': 4,\n",
+       "  'majority_position': 'Yes'},\n",
+       " 'independent': {'yes': 3, 'no': 0, 'present': 0, 'not_voting': 0},\n",
+       " 'total': {'yes': 76, 'no': 20, 'present': 0, 'not_voting': 4}}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# '2022-12-21' > '2022-12-15'\n",
+    "\n",
+    "date = '2022-12-15'\n",
+    "votes = congress.votes.by_date(SENATE, date)\n",
+    "# [ vote['bill']['bill_id'] for vote in votes['votes']]\n",
+    "print(votes.keys())\n",
+    "print([ 'bill' in vote.keys() for vote in votes['votes']])\n",
+    "print([ 'bill_id' in vote['bill'].keys() for vote in votes['votes']])\n",
+    "votes['votes'][-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bill ID: s5168-117, Passed House: 2022-12-21, Passed Senate: 2022-12-15\n",
+      "0 many bills\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[91], line 46\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[39m# This might need chamber=House but I gotta lookup how our system works to see what is voted on last\u001b[39;00m\n\u001b[1;32m     45\u001b[0m passed_bills \u001b[39m=\u001b[39m congress\u001b[39m.\u001b[39mbills\u001b[39m.\u001b[39mpassed(chamber\u001b[39m=\u001b[39mSENATE, congress\u001b[39m=\u001b[39mcongress_num)\n\u001b[0;32m---> 46\u001b[0m f \u001b[39m=\u001b[39m get_bill_vote_positions(passed_bills[\u001b[39m'\u001b[39;49m\u001b[39mbills\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m0\u001b[39;49m])\n\u001b[1;32m     47\u001b[0m f\n",
-      "Cell \u001b[0;32mIn[91], line 30\u001b[0m, in \u001b[0;36mget_bill_vote_positions\u001b[0;34m(passed_bill)\u001b[0m\n\u001b[1;32m     27\u001b[0m house_votes \u001b[39m=\u001b[39m get_bill_vote_data(HOUSE, house_date, bill_id)\n\u001b[1;32m     28\u001b[0m house_vote_positions \u001b[39m=\u001b[39m house_votes[\u001b[39m'\u001b[39m\u001b[39mvotes\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mvote\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mpositions\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m---> 30\u001b[0m senate_votes \u001b[39m=\u001b[39m get_bill_vote_data(SENATE, senate_date, bill_id)\n\u001b[1;32m     31\u001b[0m senate_vote_positions \u001b[39m=\u001b[39m senate_votes[\u001b[39m'\u001b[39m\u001b[39mvotes\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mvote\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mpositions\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m     33\u001b[0m \u001b[39mreturn\u001b[39;00m {\n\u001b[1;32m     34\u001b[0m     bill_id: bill_id,\n\u001b[1;32m     35\u001b[0m     house_passage: house_date,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     38\u001b[0m     senate_vote_positions: senate_vote_positions\n\u001b[1;32m     39\u001b[0m }\n",
-      "Cell \u001b[0;32mIn[91], line 5\u001b[0m, in \u001b[0;36mget_bill_vote_data\u001b[0;34m(chamber, date, bill_id)\u001b[0m\n\u001b[1;32m      2\u001b[0m votes \u001b[39m=\u001b[39m congress\u001b[39m.\u001b[39mvotes\u001b[39m.\u001b[39mby_date(chamber, date)\n\u001b[1;32m      3\u001b[0m \u001b[39m# votes = [vote for vote in votes['votes'] if 'bill' in vote]\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# votes = [vote for vote in votes['votes'] if 'bill_id' in vote['bill']]\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m filtered_vote \u001b[39m=\u001b[39m [vote \u001b[39mfor\u001b[39;00m vote \u001b[39min\u001b[39;00m votes[\u001b[39m'\u001b[39m\u001b[39mvotes\u001b[39m\u001b[39m'\u001b[39m] \u001b[39mif\u001b[39;00m vote[\u001b[39m'\u001b[39m\u001b[39mbill\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mbill_id\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m bill_id]\n\u001b[1;32m      6\u001b[0m \u001b[39massert\u001b[39;00m(\u001b[39mlen\u001b[39m(filtered_vote) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[1;32m      8\u001b[0m bill_vote_by_date \u001b[39m=\u001b[39m filtered_vote[\u001b[39m0\u001b[39m]\n",
-      "Cell \u001b[0;32mIn[91], line 5\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      2\u001b[0m votes \u001b[39m=\u001b[39m congress\u001b[39m.\u001b[39mvotes\u001b[39m.\u001b[39mby_date(chamber, date)\n\u001b[1;32m      3\u001b[0m \u001b[39m# votes = [vote for vote in votes['votes'] if 'bill' in vote]\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# votes = [vote for vote in votes['votes'] if 'bill_id' in vote['bill']]\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m filtered_vote \u001b[39m=\u001b[39m [vote \u001b[39mfor\u001b[39;00m vote \u001b[39min\u001b[39;00m votes[\u001b[39m'\u001b[39m\u001b[39mvotes\u001b[39m\u001b[39m'\u001b[39m] \u001b[39mif\u001b[39;00m vote[\u001b[39m'\u001b[39;49m\u001b[39mbill\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m'\u001b[39;49m\u001b[39mbill_id\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m==\u001b[39m bill_id]\n\u001b[1;32m      6\u001b[0m \u001b[39massert\u001b[39;00m(\u001b[39mlen\u001b[39m(filtered_vote) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[1;32m      8\u001b[0m bill_vote_by_date \u001b[39m=\u001b[39m filtered_vote[\u001b[39m0\u001b[39m]\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'bill_id'"
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[32], line 63\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[39m# This might need chamber=House but I gotta lookup how our system works to see what is voted on last\u001b[39;00m\n\u001b[1;32m     62\u001b[0m passed_bills \u001b[39m=\u001b[39m congress\u001b[39m.\u001b[39mbills\u001b[39m.\u001b[39mpassed(chamber\u001b[39m=\u001b[39mSENATE, congress\u001b[39m=\u001b[39mcongress_num)\n\u001b[0;32m---> 63\u001b[0m f \u001b[39m=\u001b[39m get_bill_vote_positions(passed_bills[\u001b[39m'\u001b[39;49m\u001b[39mbills\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m0\u001b[39;49m])\n\u001b[1;32m     64\u001b[0m f\n",
+      "Cell \u001b[0;32mIn[32], line 49\u001b[0m, in \u001b[0;36mget_bill_vote_positions\u001b[0;34m(passed_bill)\u001b[0m\n\u001b[1;32m     46\u001b[0m house_votes \u001b[39m=\u001b[39m get_bill_vote_data(HOUSE, house_date, bill_id)\n\u001b[1;32m     47\u001b[0m house_vote_positions \u001b[39m=\u001b[39m house_votes[\u001b[39m'\u001b[39m\u001b[39mvotes\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mvote\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mpositions\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m---> 49\u001b[0m senate_votes \u001b[39m=\u001b[39m get_bill_vote_data(SENATE, senate_date, bill_id)\n\u001b[1;32m     50\u001b[0m senate_vote_positions \u001b[39m=\u001b[39m senate_votes[\u001b[39m'\u001b[39m\u001b[39mvotes\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mvote\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mpositions\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m     52\u001b[0m \u001b[39mreturn\u001b[39;00m {\n\u001b[1;32m     53\u001b[0m     bill_id: bill_id,\n\u001b[1;32m     54\u001b[0m     house_passage: house_date,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     57\u001b[0m     senate_vote_positions: senate_vote_positions\n\u001b[1;32m     58\u001b[0m }\n",
+      "Cell \u001b[0;32mIn[32], line 23\u001b[0m, in \u001b[0;36mget_bill_vote_data\u001b[0;34m(chamber, date, bill_id)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mlen\u001b[39m(filtered_vote) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m):\n\u001b[1;32m     21\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(filtered_vote), \u001b[39m\"\u001b[39m\u001b[39mmany bills\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 23\u001b[0m bill_vote_by_date \u001b[39m=\u001b[39m filtered_vote[\u001b[39m0\u001b[39;49m]\n\u001b[1;32m     25\u001b[0m \u001b[39mreturn\u001b[39;00m congress\u001b[39m.\u001b[39mvotes\u001b[39m.\u001b[39mget( \u001b[39m# Must I call this or is this included in the bill_vote_by_date?\u001b[39;00m\n\u001b[1;32m     26\u001b[0m     chamber      \u001b[39m=\u001b[39m bill_vote_by_date[\u001b[39m'\u001b[39m\u001b[39mchamber\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[1;32m     27\u001b[0m     rollcall_num \u001b[39m=\u001b[39m bill_vote_by_date[\u001b[39m'\u001b[39m\u001b[39mroll_call\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[1;32m     28\u001b[0m     session      \u001b[39m=\u001b[39m bill_vote_by_date[\u001b[39m'\u001b[39m\u001b[39msession\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[1;32m     29\u001b[0m     congress     \u001b[39m=\u001b[39m bill_vote_by_date[\u001b[39m'\u001b[39m\u001b[39mcongress\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[1;32m     30\u001b[0m )\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
     "def get_bill_vote_data(chamber, date, bill_id):\n",
     "    votes = congress.votes.by_date(chamber, date)\n",
+    "    # if 'votes' not in votes:\n",
+    "    #     print('\"votes\" key does not exist')\n",
+    "    # elif 'bill' not in votes['votes']\n",
+    "\n",
+    "    # # TODO: remove, just for debuging\n",
+    "    # if chamber == SENATE:\n",
+    "    #     print(votes.keys())\n",
+    "    #     if 'votes' in votes.keys():\n",
+    "    #         print(votes['votes'][0].keys())\n",
+    "    #         print(votes['votes'][0]['bill'].keys())\n",
+    "\n",
+    "\n",
     "    # votes = [vote for vote in votes['votes'] if 'bill' in vote]\n",
-    "    # votes = [vote for vote in votes['votes'] if 'bill_id' in vote['bill']]\n",
-    "    filtered_vote = [vote for vote in votes['votes'] if vote['bill']['bill_id'] == bill_id]\n",
-    "    assert(len(filtered_vote) == 1)\n",
+    "    # votes = [vote for vote in votes if 'bill_id' in vote['bill']]\n",
+    "\n",
+    "    votes_with_billid = [ vote for vote in votes['votes'] if 'bill_id' in vote['bill'].keys() ]\n",
+    "    filtered_vote = [vote for vote in votes_with_billid if vote['bill']['bill_id'].lower() == bill_id.lower()]\n",
+    "    if not (len(filtered_vote) == 1):\n",
+    "        print(len(filtered_vote), \"many bills\")\n",
     "\n",
     "    bill_vote_by_date = filtered_vote[0]\n",
     "\n",
@@ -799,6 +898,10 @@
     "\n",
     "    print(f'Bill ID: {bill_id}, Passed House: {house_date}, Passed Senate: {senate_date}')\n",
     "\n",
+    "    # If the senate passed after the house, then it didn't make it into law.\n",
+    "    if house_date < senate_date:\n",
+    "        return None\n",
+    "\n",
     "    # print('Getting all house votes on', house_date)\n",
     "\n",
     "    house_votes = get_bill_vote_data(HOUSE, house_date, bill_id)\n",
@@ -815,8 +918,6 @@
     "        senate_vote_positions: senate_vote_positions\n",
     "    }\n",
     "\n",
-    "\n",
-    "congress_num = 117\n",
     "\n",
     "# This might need chamber=House but I gotta lookup how our system works to see what is voted on last\n",
     "passed_bills = congress.bills.passed(chamber=SENATE, congress=congress_num)\n",
@@ -4866,12 +4967,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (main, Jan 11 2023, 15:21:40) [GCC 11.2.0]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "091fc4e982227ae3c003fe788eedf3c07b94d006ee3a14538f20f516ed802be9"
+    "hash": "583bcd7f1effaf3462eb988fd2f4f8d73aee4e9bcea9c32ef7f3aea99c4f4088"
    }
   }
  },
