--- a/notebooks/populate_all_bill_data.ipynb
+++ b/notebooks/populate_all_bill_data.ipynb
@@ -161,10 +161,9 @@
     "    Given a chamber, date, and bill_id: find the voting records of given date associated with given bill_id.\n",
     "    If multiple votes return are allowed.\n",
     "\n",
-    "\n",
-    "\n",
-    "    house {'Passed'}\n",
-    "senate {'Amendment Rejected', 'Motion Rejected', 'Amendment Agreed to', 'Resolution Agreed to', 'Cloture Motion Agreed to', 'Joint Resolution Passed', 'Motion Agreed to', 'Bill Passed'}\n",
+    "    vote result values\n",
+    "    house: {'Passed'}\n",
+    "    senate: {'Amendment Rejected', 'Motion Rejected', 'Amendment Agreed to', 'Resolution Agreed to', 'Cloture Motion Agreed to', 'Joint Resolution Passed', 'Motion Agreed to', 'Bill Passed'}\n",
     "    '''\n",
     "    PASSING = ['Amendment Agreed to', 'Resolution Agreed to', 'Bill Passed', 'Passed']\n",
     "\n",
