--- a/notebooks/populate_all_bill_data.ipynb
+++ b/notebooks/populate_all_bill_data.ipynb
@@ -165,7 +165,8 @@
     "    house: {'Passed'}\n",
     "    senate: {'Amendment Rejected', 'Motion Rejected', 'Amendment Agreed to', 'Resolution Agreed to', 'Cloture Motion Agreed to', 'Joint Resolution Passed', 'Motion Agreed to', 'Bill Passed'}\n",
     "    '''\n",
-    "    PASSING = ['Amendment Agreed to', 'Resolution Agreed to', 'Bill Passed', 'Passed']\n",
+    "    PASSING = ['Amendment Agreed to', 'Resolution Agreed to', 'Bill Passed', # Senate\n",
+    "               'Passed']                                                     # House\n",
     "\n",
     "    votes = congress.votes.by_date(chamber, date)\n",
     "    # # After testing paging doesn't seem required.\n",
