bill validation and official summaries

--- a/notebooks/bill_info.ipynb
+++ b/notebooks/bill_info.ipynb
@@ -23,6 +23,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate_bill_id(bill_id=''):\n",
+    "    pattern = r'^(hr|s|hjres|sjres|hconres|sconres|hres|sres)(\\d+)-(\\d+)$'\n",
+    "    return bool(re.match(pattern, bill_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validate_bill_id()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^(hr|s|hjres|sjres|hconres|sconres|hres|sres)(\\d+)-(\\d+)$\n",
+      "works\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "should_fail = \"adjourn-118\"\n",
+    "should_pass = \"hconres119-117\"\n",
+    "\n",
+    "BILL_TYPES = ['hr', 's', 'hjres', 'sjres', 'hconres', 'sconres', 'hres', 'sres']\n",
+    "\n",
+    "pattern = r'^(' + '|'.join(BILL_TYPES) + r')(\\d+)-(\\d+)$'\n",
+    "print(pattern\n",
+    ")\n",
+    "\n",
+    "if re.match(pattern, should_pass):\n",
+    "    print('works')\n",
+    "    # bill_type, bill_n, congress_number = re.split(pattern, should_pass)\n",
+    "    # print(bill_type, bill_n, congress_number)\n",
+    "if re.match(pattern, should_fail):\n",
+    "    print(\"opps\")\n",
+    "if re.match(pattern, \"hcores119-117\"):\n",
+    "    print(\"opps2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern == r'^(hr|s|hjres|sjres|hconres|sconres|hres|sres)(\\d+)-(\\d+)$'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['', 'hconres', '119', '117', '']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.split(pattern, should_pass)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
