convert raw html text to structure string

--- a/notebooks/bill_info.ipynb
+++ b/notebooks/bill_info.ipynb
@@ -523,6 +523,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n\\nPromoting United States International Leadership in 5G Act of 2021\\n\\n\\n\\nThis bill directs the President to establish an interagency working group to provide assistance and technical expertise to enhance U.S. leadership in international bodies\\xa0that set\\xa0standards for 5th and future generations of mobile telecommunications (5G) technology, such as the International Telecommunication Union. The President shall also work to increase the participation of allies, partners, and the private sector. (International bodies develop standards for certain technologies, such as those used in wireless data transmission, to ensure interoperability between different companies' products; stakeholders, such as companies that manufacture equipment that uses such technologies or companies that hold relevant patents, typically participate in the standards-setting process.) \\n\\n\\n\\nThe interagency working group must report to Congress on\\xa0(1) its strategy to promote U.S. leadership in the standards-setting bodies relevant to 5G technology; (2) its strategy for diplomatic engagement with allies and partners to share security-risk information related to 5G; (3) its strategy for engagement with private sector communications and information service providers; and (4) China's activities in standards-setting bodies for 5G technology, including the scope and scale of such activities.\\n\\n\""
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "def html_to_structured_text(html_string):\n",
+    "    # Create a BeautifulSoup object from the HTML string\n",
+    "    soup = BeautifulSoup(html_string, 'html.parser')\n",
+    "\n",
+    "    # Extract the text and create a structured text string\n",
+    "    structured_text = ''\n",
+    "    for tag in soup.find_all():\n",
+    "        tag_name = tag.name\n",
+    "        if tag_name == 'p':\n",
+    "            structured_text += f'\\n\\n{tag.text}\\n\\n'\n",
+    "        elif tag_name in ['h1', 'h2', 'h3', 'h4', 'h5', 'h6']:\n",
+    "            structured_text += f'\\n\\n{tag.text}\\n{\"=\" * len(tag.text)}\\n\\n'\n",
+    "        elif tag_name == 'ul':\n",
+    "            for li in tag.find_all('li'):\n",
+    "                structured_text += f'* {li.text}\\n'\n",
+    "        elif tag_name == 'ol':\n",
+    "            for li in tag.find_all('li'):\n",
+    "                index = li.find_previous_siblings('li')\n",
+    "                index = str(len(index) + 1)\n",
+    "                structured_text += f'{index}. {li.text}\\n'\n",
+    "\n",
+    "    return structured_text\n",
+    "\n",
+    "string = \"<p><b>Promoting United States International Leadership in 5G Act of 2021</b></p> <p>This bill directs the President to establish an interagency working group to provide assistance and technical expertise to enhance U.S. leadership in international bodies&nbsp;that set&nbsp;standards for 5th and future generations of mobile telecommunications (5G) technology, such as the International Telecommunication Union. The President shall also work to increase the participation of allies, partners, and the private sector. (International bodies develop standards for certain technologies, such as those used in wireless data transmission, to ensure interoperability between different companies' products; stakeholders, such as companies that manufacture equipment that uses such technologies or companies that hold relevant patents, typically participate in the standards-setting process.) </p> <p>The interagency working group must report to Congress on&nbsp;(1) its strategy to promote U.S. leadership in the standards-setting bodies relevant to 5G technology; (2) its strategy for diplomatic engagement with allies and partners to share security-risk information related to 5G; (3) its strategy for engagement with private sector communications and information service providers; and (4) China's activities in standards-setting bodies for 5G technology, including the scope and scale of such activities.</p>\"\n",
+    "html_to_structured_text(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
