fixes empty text

--- a/notebooks/bill_info.ipynb
+++ b/notebooks/bill_info.ipynb
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "\"\\n\\nPromoting United States International Leadership in 5G Act of 2021\\n\\n\\n\\nThis bill directs the President to establish an interagency working group to provide assistance and technical expertise to enhance U.S. leadership in international bodies\\xa0that set\\xa0standards for 5th and future generations of mobile telecommunications (5G) technology, such as the International Telecommunication Union. The President shall also work to increase the participation of allies, partners, and the private sector. (International bodies develop standards for certain technologies, such as those used in wireless data transmission, to ensure interoperability between different companies' products; stakeholders, such as companies that manufacture equipment that uses such technologies or companies that hold relevant patents, typically participate in the standards-setting process.) \\n\\n\\n\\nThe interagency working group must report to Congress on\\xa0(1) its strategy to promote U.S. leadership in the standards-setting bodies relevant to 5G technology; (2) its strategy for diplomatic engagement with allies and partners to share security-risk information related to 5G; (3) its strategy for engagement with private sector communications and information service providers; and (4) China's activities in standards-setting bodies for 5G technology, including the scope and scale of such activities.\\n\\n\""
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,9 @@
     "                index = li.find_previous_siblings('li')\n",
     "                index = str(len(index) + 1)\n",
     "                structured_text += f'{index}. {li.text}\\n'\n",
-    "\n",
+    "    if structured_text == '':\n",
+    "        return html_string\n",
+    "        \n",
     "    return structured_text\n",
     "\n",
     "string = \"<p><b>Promoting United States International Leadership in 5G Act of 2021</b></p> <p>This bill directs the President to establish an interagency working group to provide assistance and technical expertise to enhance U.S. leadership in international bodies&nbsp;that set&nbsp;standards for 5th and future generations of mobile telecommunications (5G) technology, such as the International Telecommunication Union. The President shall also work to increase the participation of allies, partners, and the private sector. (International bodies develop standards for certain technologies, such as those used in wireless data transmission, to ensure interoperability between different companies' products; stakeholders, such as companies that manufacture equipment that uses such technologies or companies that hold relevant patents, typically participate in the standards-setting process.) </p> <p>The interagency working group must report to Congress on&nbsp;(1) its strategy to promote U.S. leadership in the standards-setting bodies relevant to 5G technology; (2) its strategy for diplomatic engagement with allies and partners to share security-risk information related to 5G; (3) its strategy for engagement with private sector communications and information service providers; and (4) China's activities in standards-setting bodies for 5G technology, including the scope and scale of such activities.</p>\"\n",
