--- a/notebooks/bill_info.ipynb
+++ b/notebooks/bill_info.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -43,13 +43,13 @@
        "False"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "validate_bill_id()"
+    "validate_bill_id(should_fail)"
    ]
   },
   {
