save data to json file

--- a/notebooks/bill_info.ipynb
+++ b/notebooks/bill_info.ipynb
@@ -571,6 +571,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n\\nThis concurrent resolution condemns the October 25, 2021, coup in Sudan. It recognizes the Prime Minister and his cabinet as the constitutional leaders of Sudan's transitional government and calls for Sudan's military junta, among other things, to\\n\\n* immediately release all civilian government officials, civil society members, and other individuals detained in connection with the coup;\\n* return to constitutional rule under the transitional constitution; and \\n* lift the state of emergency, including complete restoration of all means of communication. \\n\\n\\nFinally, the concurrent resolution calls on international partners to\\n\\n*  join U.S. efforts to impose targeted sanctions on the junta and other accomplices to the coup; and\\n* suspend Sudan's participation in all regional multilateral organizations until Sudan is returned to constitutional rule under the transitional constitution.\\n\""
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"<p>This concurrent resolution condemns the October 25, 2021, coup in Sudan. It recognizes the Prime Minister and his cabinet as the constitutional leaders of Sudan's transitional government and calls for Sudan's military junta, among other things, to</p> <ul> <li>immediately release all civilian government officials, civil society members, and other individuals detained in connection with the coup;</li> <li>return to constitutional rule under the transitional constitution; and </li> <li>lift the state of emergency, including complete restoration of all means of communication. </li> </ul> <p>Finally, the concurrent resolution calls on international partners to</p> <ul> <li> join U.S. efforts to impose targeted sanctions on the junta and other accomplices to the coup; and</li> <li>suspend Sudan's participation in all regional multilateral organizations until Sudan is returned to constitutional rule under the transitional constitution.</li> </ul>\"\n",
+    "\n",
+    "html_to_structured_text(string)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
